docs/yaml/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gangway
  namespace: gangway
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - secretName: gangway
    hosts:
    - ${GANGWAY_HOST}
  rules:
  - host: ${GANGWAY_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gangwaysvc
            port:
              name: http
